--- a/vocab/time/seasons.json
+++ b/vocab/time/seasons.json
@@ -2,31 +2,31 @@
   "season":[
     {
       "word":"계절",
-      "description":"", "exmples":[]
+      "description":"", "exmples":[], "level": 10
     }
   ],
   "spring":[
     {
       "word":"봄",
-      "description":"", "exmples":[]
+      "description":"", "exmples":[], "level": 10
     }
   ],
   "summer":[
     {
       "word":"여름",
-      "description":"", "exmples":[]
+      "description":"", "exmples":[], "level": 10
     }
   ],
   "fall":[
     {
       "word":"가을",
-      "description":"", "exmples":[]
+      "description":"", "exmples":[], "level": 10
     }
   ],
   "winter":[
     {
       "word":"겨울",
-      "description":"", "exmples":[]
+      "description":"", "exmples":[], "level": 10
     }
   ]
 }
