--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,21 +10,15 @@ env:
   DOCKER_REGISTRY: autoneeip/adrien_project_korean:latest
 
 jobs:
-  build:
+  buildx:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: .
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Login to Docker
-      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-
-    - name: Build Docker Image
-      run: |
-        docker build . -t $DOCKER_REGISTRY
-      
-    - name: Docker Push
-      run: docker push $DOCKER_REGISTRY
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - name: Build And Push Docker Image
+        run: |
+          docker buildx build -t $DOCKER_REGISTRY --progress plain --platform linux/amd64,linux/arm/v7,linux/arm64 --push .
